feat: add auth check

--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,7 @@ server:
   # Connection timeouts (in seconds)
   read_timeout: 300   # 5 minutes
   write_timeout: 300  # 5 minutes
+  auth: secretpassword
 
 persistence:
   # Append-Only File (AOF) settings
